[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/league-gothic-master/LeagueGothic-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 315.0
margin_top = 91.0
margin_right = 468.0
margin_bottom = 349.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Scape Ore Swamp"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 153.0
margin_bottom = 258.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 19.0
margin_right = 134.0
margin_bottom = 204.0
custom_constants/separation = 20

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 115.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
flat = true

[node name="Profiles" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 115.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
text = "Profiles"
flat = true

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 115.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 4 )
text = "Options"
flat = true

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 115.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 5 )
text = "Quit to Desktop"
flat = true
[connection signal="button_down" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Profiles" to="." method="_on_Profiles_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
